--- a/result.html
+++ b/result.html
@@ -90,7 +90,7 @@
 <body>
     <div class="container">
         <div class="emoji">😂</div>
-        <h1> ساقط يبن الــــ**** مش كل شوية تبعتلي رسالة بقا وأمير عمك</h1>
+        <h1>  ساقط يا كلب امير عمك </h1>
         <a href="index.html" class="back-btn">العودة للصفحة الرئيسية</a>
     </div>
 </body>
