--- a/result.html
+++ b/result.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="emoji">😂</div>
+        <div class="emoji">🐷</div>
         <h1>  ساقط يا كلب امير عمك </h1>
         <a href="index.html" class="back-btn">العودة للصفحة الرئيسية</a>
     </div>
