--- a/result.html
+++ b/result.html
@@ -89,8 +89,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="emoji">🐷</div>
-        <h1>  ساقط يا كلب امير عمك </h1>
+        <div class="emoji"></div>
+        <h1>   ساقط يا ****    </h1>
         <a href="index.html" class="back-btn">العودة للصفحة الرئيسية</a>
     </div>
 </body>
